feat: enhance README and sitemap with changelog support
* add mobile-friendly feature to README
* update sitemap to include changelog entries
* implement changelog page with metadata and SEO improvements
* validate changelog metadata with required fields
* enhance changelog entry pages with canonical links and descriptions

--- a/src/app/changelog/content/easy-invoice-pdf-launch.mdx
+++ b/src/app/changelog/content/easy-invoice-pdf-launch.mdx
@@ -1,6 +1,7 @@
 export const metadata = {
-  title:
-    "EasyInvoicePDF Launch - Free & Open-Source Invoice Generator with Live Preview",
+  title: "EasyInvoicePDF Launch - Free & Open-Source Invoice Generator",
+  description:
+    "Create professional invoices instantly with real-time preview and shareable links. No registration needed.",
   date: "2025-03-03",
   version: "1.0.0",
   type: "major",
