--- a/src/app/changelog/content/stripe-pdf-template.mdx
+++ b/src/app/changelog/content/stripe-pdf-template.mdx
@@ -1,5 +1,7 @@
 export const metadata = {
   title: "Stripe Invoice Template & Landing Page Improvements",
+  description:
+    "Introducing a modern, Stripe-inspired invoice template with professional styling and layout optimizations",
   date: "2025-06-28",
   version: "1.1.0",
   type: "major",
